# AI_MED_Recruitment

./: .gitignore  pyproject.toml  requirements.txt
Task/: README.md  cardiomegaly.ipynb
